[package]
name = "mppt-control"
version = "1.0.0"
edition = "2021"
description = "Read/write parameters on the Morningstar TriStar using MPPT"
license = "GPL 3.0"
readme = "README.md"
authors = ["Alex Janka <alex@alexjanka.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmodbus-rs = "0.8.3"
clap = { version = "3.2.20", features = ["derive"] }
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde-value = "0.7"